pkg/lang/testdata/ub/stack-values/invalid/input-resource-reference.ub
factory: {
  inputs: { x: resource.a.b.c }
}
